try hiding dark mode images (resolves #2476)

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -38,3 +38,7 @@ img {
 .hub-logo > img {
     display: block;
 }
+
+a [href$="#gh-dark-mode-only"] {
+    display: none;
+}
